# learning-opencv3-solns

./: README.md
ocv3/ch2/ch2ex2/src/: CMakeLists.txt  ch2ex2-ocv3.cpp
ocv3/ch2/ch2ex3/src/: CMakeLists.txt
ocv3/ch2/ch2ex4/src/: CMakeLists.txt  ch2ex4-ocv3.cpp
ocv3/ch2/ch2ex5/src/: CMakeLists.txt  ch2ex5-ocv3.cpp
ocv4/ch2/ch2ex2/src/: CMakeLists.txt  ch2ex2-ocv4.cpp
ocv4/ch2/ch2ex3/src/: CMakeLists.txt  ch2ex3-ocv4.cpp
ocv4/ch2/ch2ex4/src/: CMakeLists.txt  ch2ex4-ocv4.cpp
ocv4/ch2/ch2ex5/src/: CMakeLists.txt  ch2ex5-ocv4.cpp
